--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
+    "name": "andressantos/loanscalculator",
+    "description": "Proyecto de calculadora financiera",
+    "require": {
+        "php": ">=7.4",
+        "fpdf/fpdf": "^1.81"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
